tests/fails/colon_call.lt
var obj = {
   foo = \@, x ->
      return x
}

print(obj:foo(2))
